review cards wrapping issue fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -489,16 +489,17 @@ p.accent-p {
   }
   .review {
     flex: 0 0 49%;
+    margin: 0px 10px 20px 10px;
+    max-width: calc(50% - 20px);
   }
 }
 @media only screen and (min-width: 1200px) {
   .reviews-card-wrapper {
     justify-content: flex-start;
-    gap: 20px;
   }
   .review {
-    flex: 1 1 450px;
-    margin-bottom: 0;
+    flex: 1 1 280px;
+    max-width: unset;
   }
   .review:last-of-type {
     flex-grow: 1;
